cli/tests/ui/overlay_ref_invalid.stderr
Error: manifest::invalid_overlay_ref

  × check failed
  ╰─▶ invalid overlay ref `wrapper.rewrite`: expected `#<use>.<export>`
   ╭─[<CARGO_MANIFEST_DIR>/tests/ui/overlay_ref_invalid.json5:6:14]
 5 │   },
 6 │   overlays: ["wrapper.rewrite"],
   ·              ────────┬────────
   ·                      ╰── overlay ref here
 7 │ }
   ╰────
